# CV-Scanner

./: README.md  docker-compose.yml
.github/workflows/: CICD.yml  build.yml  main_cvscanner-ai.yml  start.sh
AI/: .gitignore  AI.py  Dockerfile  Procfile  ReadMe.md  ai_tags.py  app.py  bart_model.py  categories.json  config_store.py  cv_parser.py  parser.py  requirements.txt  run.txt  start.sh  tika_setup.py  worker.py
API/api/: Dockerfile  pom.xml
Documentation/: README.md  teamREADME.md
Engine/: CMakeLists.txt  CVData.cpp  CVData.h  CVInterpreter.cpp  CVInterpreter.h  CVSectionExtractor.cpp  CVSectionExtractor.h  Dockerfile  EducationInterpreter.cpp  EducationInterpreter.h  Engine.cpp  Engine.h  EngineCLI.cpp  EngineCLI.h  ExperienceInterpreter.cpp  ExperienceInterpreter.h  Main.java  PersonalInfoInterpreter.cpp  PersonalInfoInterpreter.h  SkillsInterpreter.cpp  SkillsInterpreter.h  UnifiedMain.cpp  UnifiedMain.h  main.cpp
Engine/engine/: CMakeLists.txt  CVData.cpp  CVData.h  CVInterpreter.cpp  CVInterpreter.h  CVSectionExtractor.cpp  CVSectionExtractor.h  EducationInterpreter.cpp  EducationInterpreter.h  Engine.cpp  Engine.h  EngineCLI.cpp  EngineCLI.h  ExperienceInterpreter.cpp  ExperienceInterpreter.h  PersonalInfoInterpreter.cpp  PersonalInfoInterpreter.h  SkillsInterpreter.cpp  SkillsInterpreter.h  UnifiedMain.cpp
UI/CV-Scanner/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
UI/CV-Scanner/src/: App.css  App.tsx  index.css  main.tsx
UI/CV-Scanner/src/components/: ErrorBoundary.tsx  LandingOverlay.tsx  LoadingOverlay.tsx  PublicRoute.tsx  RoleBaseAccess.tsx
UI/CV-Scanner/src/hooks/: brandLoader.tsx  useGlobalLoader.tsx
UI/CV-Scanner/src/lib/: ProtectedRoute.tsx  api.ts  auth.ts
UI/CV-Scanner/src/pages/: AddUserPage.tsx  CandidateExperiencePage.tsx  CandidateNotesPage.tsx  CandidateReviewSummary.tsx  CandidateSkillsPage.tsx  CandidatesDashboard.tsx  (+19 more)
(+11 files in other folders)
